# arch-crypt

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/modules/: archiver.rs  cli_args.rs  encryption.rs  file_handler.rs  mod.rs
