[package]
name = "pzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# snap = "1.1.0"
tar = "0.4.40"
argon2 = "0.5.2"
chacha20poly1305 = "0.10.1"
# aes-gcm-siv = "0.11.1"
# base64 = "0.21.4"
chacha20 = "0.9.0"
clap = "4.4.3"
