[package]
name = "arch-crypt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arch-crypt"
path = "src/main.rs"

[dependencies]
tar = "0.4.40"
argon2 = "0.5.2"
chacha20poly1305 = "0.10.1"
chacha20 = "0.9.0"
clap = "4.4.3"
log = "0.4.20"
env_logger = "0.10.0"
# snap = "1.1.0"
# aes-gcm-siv = "0.11.1"
# base64 = "0.21.4"
